<resources>
    <string name="app_name">Bill Plaese</string>
    <string name="amount">Amount:</string>
    <string name="enter_bill_amount">Enter bill amount</string>
    <string name="numPax">Number of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="enter_number_of_people">Enter number of people</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="enter_discount_amount">Enter discount (%)</string>
    <string name="textview">TextView</string>
</resources>